--- a/index.html
+++ b/index.html
@@ -38,7 +38,7 @@
 
     <div class="container">
         <!-- Sidebar -->
-        <aside class="sidebar">
+        <div class="sidebar">
             <h2>Patients</h2>
             <ul class="patient-list">
                 <li><img src="assets/Layer 8.png" alt="Patient Icon">Emily Williams</li>
@@ -47,12 +47,12 @@
                 <li class="selected"><img src="assets/Layer 2.png" alt="Patient Icon">Jessica Taylor</li>
                 <li><img src="assets/Layer 2.png" alt="Patient Icon">Samantha Johnson</li>
             </ul>
-        </aside>
+        </div>
 
         <!-- Main Content -->
-        <main class="main-content">
+        <div class="main-content">
             <!-- Diagnosis History and Vitals Section -->
-            <section class="diagnosis-vitals">
+            <div class="diagnosis-vitals">
                 <h3>Diagnosis History</h3>
                 <div class="chart-container">
                     <canvas id="bloodPressureChart"></canvas>
@@ -78,10 +78,10 @@
                         <span>Lower than Average</span>
                     </div>
                 </div>
-            </section>
+            </div>
 
             <!-- Diagnostic List -->
-            <section class="diagnostic-list">
+            <div class="diagnostic-list">
                 <h3>Diagnostic List</h3>
                 <table>
                     <thead>
@@ -109,12 +109,12 @@
                         </tr>
                     </tbody>
                 </table>
-            </section>
-        </main>
+            </div>
+        </div>
 
-        <main class="main-content">
+        <div class="main-content">
             <!-- Profile Section -->
-            <aside class="profile">
+            <div class="profile">
                 <img src="assets/Layer 2.png" alt="Jessica Taylor" class="profile-image">
                 <h3>Jessica Taylor</h3>
                 <p><img src="assets/calendar_FILL0_wght300_GRAD0_opsz24.svg" alt="Calendar Icon">Date of Birth: August
@@ -128,9 +128,9 @@
                 <p><img src="assets/insurance_FILL0_wght300_GRAD0_opsz24.svg" alt="Insurance Icon">Insurance Provider:
                     Sunrise Health Assurance</p>
                 <button>Show All Information</button>
-            </aside>
+            </div>
             <!-- Lab Results -->
-            <section class="lab-results">
+            <div class="lab-results">
                 <h3>Lab Results</h3>
                 <ul>
                     <li>Blood Tests <a href="#" download>⬇️</a></li>
@@ -139,8 +139,8 @@
                     <li>X-Rays <a href="#" download>⬇️</a></li>
                     <li>Urine Test <a href="#" download>⬇️</a></li>
                 </ul>
-            </section>
-        </main>
+            </div>
+        </div>
     </div>
 
     <script src="script.js"></script>
