--- a/index.html
+++ b/index.html
@@ -40,16 +40,127 @@
 
     <div class="container">
         <!-- Sidebar -->
-        <div class="sidebar">
-            <h2>Patients</h2>
-            <ul class="patient-list">
-                <li><img src="assets/Layer 8.png" alt="Patient Icon">Emily Williams</li>
-                <li><img src="assets/Layer 1.png" alt="Patient Icon">Ryan Johnson</li>
-                <li><img src="assets/Layer 3.png" alt="Patient Icon">Brandon Mitchell</li>
-                <li class="selected"><img src="assets/Layer 2.png" alt="Patient Icon">Jessica Taylor</li>
-                <li><img src="assets/Layer 6.png" alt="Patient Icon">Samantha Johnson</li>
-            </ul>
-        </div>
+        <aside class="sidebar">
+            <div class="sidebar-header">
+                <h2>Patients</h2>
+                <img src="assets/search_FILL0_wght300_GRAD0_opsz24.svg" alt="Search Icon" class="search-icon">
+            </div>
+            <div class="patient-list-container">
+                <ul class="patient-list">
+                    <li class="patient-item">
+                        <img src="assets/Layer 8.png" alt="Patient Icon">
+                        <div class="patient-info">
+                            <span class="patient-name">Emily Williams</span>
+                            <span class="patient-details">Female, 18</span>
+                        </div>
+                        <img src="assets/more_horiz_FILL0_wght300_GRAD0_opsz24.svg" alt="More Icon"
+                            class="more-options">
+                    </li>
+                    <li class="patient-item">
+                        <img src="assets/Layer 1.png" alt="Patient Icon">
+                        <div class="patient-info">
+                            <span class="patient-name">Ryan Johnson</span>
+                            <span class="patient-details">Male, 45</span>
+                        </div>
+                        <img src="assets/more_horiz_FILL0_wght300_GRAD0_opsz24.svg" alt="More Icon"
+                            class="more-options">
+                    </li>
+                    <li class="patient-item">
+                        <img src="assets/Layer 3.png" alt="Patient Icon">
+                        <div class="patient-info">
+                            <span class="patient-name">Brandon Mitchell</span>
+                            <span class="patient-details">Male, 36</span>
+                        </div>
+                        <img src="assets/more_horiz_FILL0_wght300_GRAD0_opsz24.svg" alt="More Icon"
+                            class="more-options">
+                    </li>
+                    <li class="patient-item selected">
+                        <img src="assets/Layer 2.png" alt="Patient Icon">
+                        <div class="patient-info">
+                            <span class="patient-name">Jessica Taylor</span>
+                            <span class="patient-details">Female, 28</span>
+                        </div>
+                        <img src="assets/more_horiz_FILL0_wght300_GRAD0_opsz24.svg" alt="More Icon"
+                            class="more-options">
+                    </li>
+                    <li class="patient-item">
+                        <img src="assets/Layer 6.png" alt="Patient Icon">
+                        <div class="patient-info">
+                            <span class="patient-name">Samantha Johnson</span>
+                            <span class="patient-details">Female, 56</span>
+                        </div>
+                        <img src="assets/more_horiz_FILL0_wght300_GRAD0_opsz24.svg" alt="More Icon"
+                            class="more-options">
+                    </li>
+                    <li class="patient-item">
+                        <img src="assets/Layer 12.png" alt="Patient Icon">
+                        <div class="patient-info">
+                            <span class="patient-name">Ashley Martinez</span>
+                            <span class="patient-details">Female, 54</span>
+                        </div>
+                        <img src="assets/more_horiz_FILL0_wght300_GRAD0_opsz24.svg" alt="More Icon"
+                            class="more-options">
+                    </li>
+                    <li class="patient-item">
+                        <img src="assets/Layer 10.png" alt="Patient Icon">
+                        <div class="patient-info">
+                            <span class="patient-name">Olivia Brown</span>
+                            <span class="patient-details">Female, 32</span>
+                        </div>
+                        <img src="assets/more_horiz_FILL0_wght300_GRAD0_opsz24.svg" alt="More Icon"
+                            class="more-options">
+                    </li>
+                    <li class="patient-item">
+                        <img src="assets/Layer 9.png" alt="Patient Icon">
+                        <div class="patient-info">
+                            <span class="patient-name">Tyler Davis</span>
+                            <span class="patient-details">Male, 19</span>
+                        </div>
+                        <img src="assets/more_horiz_FILL0_wght300_GRAD0_opsz24.svg" alt="More Icon"
+                            class="more-options">
+                    </li>
+                    <li class="patient-item">
+                        <img src="assets/Layer 4.png" alt="Patient Icon">
+                        <div class="patient-info">
+                            <span class="patient-name">Kevin Anderson</span>
+                            <span class="patient-details">Male, 30</span>
+                        </div>
+                        <img src="assets/more_horiz_FILL0_wght300_GRAD0_opsz24.svg" alt="More Icon"
+                            class="more-options">
+                    </li>
+                    <li class="patient-item">
+                        <img src="assets/Layer 5.png" alt="Patient Icon">
+                        <div class="patient-info">
+                            <span class="patient-name">Dylan Thompson</span>
+                            <span class="patient-details">Male, 36</span>
+                        </div>
+                        <img src="assets/more_horiz_FILL0_wght300_GRAD0_opsz24.svg" alt="More Icon"
+                            class="more-options">
+                    </li>
+                    <li class="patient-item">
+                        <img src="assets/Layer 7.png" alt="Patient Icon">
+                        <div class="patient-info">
+                            <span class="patient-name">Nathan Evans</span>
+                            <span class="patient-details">Male, 58</span>
+                        </div>
+                        <img src="assets/more_horiz_FILL0_wght300_GRAD0_opsz24.svg" alt="More Icon"
+                            class="more-options">
+                    </li>
+                    <li class="patient-item">
+                        <img src="assets/pexels-photo-1222271.png" alt="Patient Icon">
+                        <div class="patient-info">
+                            <span class="patient-name">Mike Nolan</span>
+                            <span class="patient-details">Male, 31</span>
+                        </div>
+                        <img src="assets/more_horiz_FILL0_wght300_GRAD0_opsz24.svg" alt="More Icon"
+                            class="more-options">
+                    </li>
+                </ul>
+                <div class="patient-list-slider">
+                    <div class="patient-list-thumb"></div>
+                </div>
+            </div>
+        </aside>
 
         <!-- Main Content -->
         <div class="main-content">
@@ -61,30 +172,35 @@
                 </div>
 
                 <div class="vitals">
-                    <div class="vital">
+                    <div class="vital-1">
                         <img src="assets/respiratory rate.svg" class="vital-icon" alt="Respiratory Icon">
                         <h4>Respiratory Rate</h4>
                         <h1>20 bpm</h1>
                         <p>Normal</p>
                     </div>
-                    <div class="vital">
+                    <div class="vital-2">
                         <img src="assets/temperature.svg" class="vital-icon" alt="Temperature Icon">
                         <h4>Temperature</h4>
                         <h1>98.6°F</h1>
                         <p>Normal</p>
                     </div>
-                    <div class="vital">
+                    <div class="vital-3">
                         <img src="assets/HeartBPM.svg" class="vital-icon" alt="Heart Rate Icon">
                         <h4>Heart Rate</h4>
                         <h1>78 bpm</h1>
-                        <p>Lower than Average</p>
+                        <p>
+                            <img src="assets/ArrowDown.svg" class="vital-arrow" alt="Arrow Down">
+                            Lower than Average
+                        </p>
                     </div>
                 </div>
             </div>
 
             <!-- Diagnostic List -->
             <div class="diagnostic-list">
-                <h3>Diagnostic List</h3>
+                <div class="diagnostic-header">
+                    <h2>Diagnostic List</h2>
+                </div>
                 <table>
                     <thead>
                         <tr>
@@ -97,7 +213,7 @@
                         <tr>
                             <td>Hypertension</td>
                             <td>Chronic high blood pressure</td>
-                            <td>Under Observation</td>
+                            <td>Under<br/> Observation</td>
                         </tr>
                         <tr>
                             <td>Type 2 Diabetes</td>
@@ -109,6 +225,14 @@
                             <td>Frequent episodes of bronchial constriction</td>
                             <td>Inactive</td>
                         </tr>
+                        <tr>
+                            <td>Osteoarthritis</td>
+                            <td>Degenerative joint disease</td>
+                            <td>Untreated</td>
+                        </tr>
+                        <div class="diagnostic-list-slider">
+                            <div class="diagnostic-list-thumb"></div>
+                        </div>
                     </tbody>
                 </table>
             </div>
@@ -165,19 +289,52 @@
 
             <!-- Lab Results -->
             <div class="lab-results">
-                <h3>Lab Results</h3>
-                <ul>
-                    <li>Blood Tests <a href="#" download><img src="assets/download_FILL0_wght300_GRAD0_opsz24.png"
-                                alt="download" class="download-image"></a></li>
-                    <li>CT Scans <a href="#" download><img src="assets/download_FILL0_wght300_GRAD0_opsz24.png"
-                                alt="download" class="download-image"></a></li>
-                    <li>Radiology Reports <a href="#" download><img src="assets/download_FILL0_wght300_GRAD0_opsz24.png"
-                                alt="download" class="download-image"></a></li>
-                    <li>X-Rays <a href="#" download><img src="assets/download_FILL0_wght300_GRAD0_opsz24.png"
-                                alt="download" class="download-image"></a></li>
-                    <li>Urine Test <a href="#" download><img src="assets/download_FILL0_wght300_GRAD0_opsz24.png"
-                                alt="download" class="download-image"></a></li>
-                </ul>
+                <div class="lab-header">
+                    <h2>Lab Results</h2>
+                </div>
+
+                <div class="result-list-container">
+                    <ul class="result-list">
+                        <li class="result-item">
+                            <div class="result-info">
+                                <span class="result-name">Blood Tests</span>
+                            </div>
+                            <a href="#" download><img src="assets/download_FILL0_wght300_GRAD0_opsz24.png"
+                                    alt="download" class="download-image"></a>
+                        </li>
+                        <li class="result-item selected">
+                            <div class="result-info">
+                                <span class="result-name">CT Scans</span>
+                            </div>
+                            <a href="#" download><img src="assets/download_FILL0_wght300_GRAD0_opsz24.png"
+                                    alt="download" class="download-image"></a>
+                        </li>
+                        <li class="result-item">
+                            <div class="result-info">
+                                <span class="result-name">Radiology Reports</span>
+                            </div>
+                            <a href="#" download><img src="assets/download_FILL0_wght300_GRAD0_opsz24.png"
+                                    alt="download" class="download-image"></a>
+                        </li>
+                        <li class="result-item">
+                            <div class="result-info">
+                                <span class="result-name">X-Rays</span>
+                            </div>
+                            <a href="#" download><img src="assets/download_FILL0_wght300_GRAD0_opsz24.png"
+                                    alt="download" class="download-image"></a>
+                        </li>
+                        <li class="result-item">
+                            <div class="result-info">
+                                <span class="result-name">Urine Test</span>
+                            </div>
+                            <a href="#" download><img src="assets/download_FILL0_wght300_GRAD0_opsz24.png"
+                                    alt="download" class="download-image"></a>
+                        </li>
+                    </ul>
+                    <div class="result-list-slider">
+                        <div class="result-list-thumb"></div>
+                    </div>
+                </div>
             </div>
         </div>
     </div>
