--- a/index.html
+++ b/index.html
@@ -265,13 +265,13 @@
         <div class="main-content">
             <!-- Profile Section -->
             <div class="profile">
-                <img id="profile_picture" src="" alt="profile-picture" class="profile-image">
+                <img id="profile-picture" src="" alt="profile-picture" class="profile-image">
                 <h3 class="profile-name" id="name"></h3>
                 <div class="profile-detail">
                     <img src="assets/BirthIcon.svg" alt="Calendar Icon" class="detail-icon">
                     <div class="detail-text">
                         <span class="detail-title">Date of Birth</span>
-                        <span class="detail-info" id="date_of_birth"></span>
+                        <span class="detail-info" id="dob"></span>
                     </div>
                 </div>
 
@@ -287,7 +287,7 @@
                     <img src="assets/PhoneIcon.svg" alt="Phone Icon" class="detail-icon">
                     <div class="detail-text">
                         <span class="detail-title">Contact Info</span>
-                        <span class="detail-info" id="phone_number"></span>
+                        <span class="detail-info" id="phone"></span>
                     </div>
                 </div>
 
@@ -295,7 +295,7 @@
                     <img src="assets/PhoneIcon.svg" alt="Emergency Contacts Icon" class="detail-icon">
                     <div class="detail-text">
                         <span class="detail-title">Emergency Contacts</span>
-                        <span class="detail-info" id="emergency_contact"></span>
+                        <span class="detail-info" id="emergency-contact"></span>
                     </div>
                 </div>
 
@@ -303,7 +303,7 @@
                     <img src="assets/InsuranceIcon.svg" alt="Insurance Icon" class="detail-icon">
                     <div class="detail-text">
                         <span class="detail-title">Insurance Provider</span>
-                        <span class="detail-info" id="insurance_type"></span>
+                        <span class="detail-info" id="insurance"></span>
                     </div>
                 </div>
 
